--- a/module-rt/Cargo.toml
+++ b/module-rt/Cargo.toml
@@ -5,9 +5,8 @@ authors = ["CodeChain Team <hi@codechain.io>"]
 edition = "2018"
 
 [dependencies]
-remote-trait-object = { version = "0.1.4", git = "https://github.com/CodeChain-io/remote-trait-object.git" }
-remote-trait-object-macro = { version = "0.1.4", git = "https://github.com/CodeChain-io/remote-trait-object.git" }
-foundry-process-sandbox = { git = "https://github.com/CodeChain-io/foundry-sandbox.git"}
+remote-trait-object = { version = "0.2.0", git = "https://github.com/CodeChain-io/remote-trait-object.git" }
+foundry-process-sandbox = { git = "https://github.com/CodeChain-io/foundry-sandbox" }
 parking_lot = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11.1"
