Update the license to GPL

--- a/module-rt/Cargo.toml
+++ b/module-rt/Cargo.toml
@@ -2,6 +2,7 @@
 name = "foundry-module-rt"
 version = "0.1.1"
 authors = ["CodeChain Team <hi@codechain.io>"]
+license = "GPL-3.0"
 edition = "2018"
 
 [dependencies]
