--- a/module-rt/Cargo.toml
+++ b/module-rt/Cargo.toml
@@ -14,3 +14,6 @@ serde_cbor = "0.11.1"
 linkme = "0.2.1"
 crossbeam = "0.7"
 threadpool = "1.8.1"
+
+[dev-dependencies]
+rand = { version = "0.7.3" }
