--- a/module-rt/Cargo.toml
+++ b/module-rt/Cargo.toml
@@ -6,8 +6,8 @@ license = "GPL-3.0"
 edition = "2018"
 
 [dependencies]
-remote-trait-object = "=0.3.0"
-foundry-process-sandbox = { version = "0.1.0", git = "https://github.com/CodeChain-io/foundry-sandbox", tag = "v0.1.0" }
+remote-trait-object = "0.4.0"
+foundry-process-sandbox = { version = "0.2.0", git = "https://github.com/CodeChain-io/foundry-sandbox", tag = "v0.2.0" }
 parking_lot = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11.1"
