--- a/module-rt/Cargo.toml
+++ b/module-rt/Cargo.toml
@@ -6,8 +6,8 @@ license = "GPL-3.0"
 edition = "2018"
 
 [dependencies]
-remote-trait-object = "0.3.0"
-foundry-process-sandbox = { git = "https://github.com/CodeChain-io/foundry-sandbox" }
+remote-trait-object = "0.4.0"
+foundry-process-sandbox = { git = "https://github.com/CodeChain-io/foundry-sandbox.git" }
 parking_lot = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11.1"
